--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,7 @@
 .shadow-custom-navbar {
-  box-shadow: 2px 0px 5px #707070; }
+  box-shadow: 2px 0px 5px #707070;
+}
+
+.card img {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
