--- a/assets/scss/bootstrap.scss
+++ b/assets/scss/bootstrap.scss
@@ -1,6 +1,19 @@
 // Changing Bootstrap Style
+
+// Custom font size
 $font-size-base: 0.95rem;
- 
+
+// Custom colors
+$custom-primary-color: #6610f2;
+$custom-dark-color: #031633;
+$custom-green-color: #03A625;
+
+
+$primary: $custom-primary-color;
+$success: $custom-green-color;
+$dark: $custom-dark-color;
+
+
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
 
