published job box animation

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -81,3 +81,12 @@ body {
   opacity: 0;
   right: -544px;
 }
+
+.publish_job_box {
+  max-width: 768px;
+  position: absolute;
+  z-index: 1;
+  top: 100px;
+  opacity: 0;
+  right: -544px;
+}
