--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -80,3 +80,12 @@ body {
   opacity: 0;
   right: -544px;
 }
+
+.js-update-publish-job-form {
+  max-width: 768px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  top: 50%;
+  right: -544px;
+}
