--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -99,6 +99,14 @@ body {
   right: -544px;
 }
 
+.js_hr_box{
+  max-width: 768px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  right: -544px;
+}
+
 .tooltip-icon {
   cursor: pointer;
   transition: 0.3s;
