--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -107,6 +107,14 @@ body {
   right: -544px;
 }
 
+.js-confirm-approve {
+  max-width: 768px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  right: -544px;
+}
+
 .tooltip-icon {
   cursor: pointer;
   transition: 0.3s;
