--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,6 +115,22 @@ body {
   right: -544px;
 }
 
+.js-send-msg-hr-box {
+  width: 512px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  right: -544px;
+}
+
+.js-send-msg-company-box {
+  width: 512px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  right: -544px;
+}
+
 .tooltip-icon {
   cursor: pointer;
   transition: 0.3s;
@@ -130,4 +146,12 @@ body {
 
 .cursor-pointer:hover {
   cursor: pointer;
+}
+
+.transform-scale {
+  transition: 0.2s;
+}
+
+.transform-scale:active {
+  transform: scale(0.9);
 }
