--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -131,6 +131,14 @@ body {
   right: -544px;
 }
 
+.js-upload-logo-box {
+  width: 320px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  right: -544px;
+}
+
 .tooltip-icon {
   cursor: pointer;
   transition: 0.3s;
