--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -144,7 +144,7 @@ body {
 }
 
 .js-send-msg-hr-box {
-  width: 512px;
+  width: 500px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -152,7 +152,7 @@ body {
 }
 
 .js-send-msg-company-box {
-  width: 512px;
+  width: 500px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -160,7 +160,7 @@ body {
 }
 
 .js-upload-logo-box {
-  width: 320px;
+  max-width: 320px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -198,4 +198,13 @@ body {
 
 .js-h-600px {
   height: 600px;
+}
+
+@media (max-width: 768px) {
+  .js-send-msg-box-md {
+    width: 300px;
+  }
+  .w-1400px {
+    width: 1400px;
+  }
 }
