--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -160,7 +160,7 @@ body {
 }
 
 .js-send-msg-hr-box {
-  width: 512px;
+  width: 500px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -168,7 +168,7 @@ body {
 }
 
 .js-send-msg-company-box {
-  width: 512px;
+  width: 500px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -176,7 +176,7 @@ body {
 }
 
 .js-upload-logo-box {
-  width: 320px;
+  max-width: 320px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -214,4 +214,15 @@ body {
 
 .js-h-600px {
   height: 600px;
+}
+
+// Media queries
+@media (max-width: 768px) {
+  .js-send-msg-box-md {
+    width: 300px;
+  }
+
+  .w-1400px {
+    width: 1400px;
+  }
 }
