--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -119,7 +119,7 @@ body {
 }
 
 .js_hr_box {
-  max-width: 768px;
+  max-width: 500px;
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -202,6 +202,9 @@ body {
 
 @media (max-width: 768px) {
   .js-send-msg-box-md {
+    width: 300px;
+  }
+  .js-create-hr-xsm-box {
     width: 300px;
   }
   .w-1400px {
