--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -200,6 +200,10 @@ body {
   height: 600px;
 }
 
+.dropdown-menu {
+  top: 28px !important;
+}
+
 @media (max-width: 768px) {
   .js-send-msg-box-md {
     width: 300px;
